WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218899
AudioSampleDataSource::pullSamplesInternal does not need to pass its sampleCount parameter as in/out
https://bugs.webkit.org/show_bug.cgi?id=218899
Summary
AudioSampleDataSource::pullSamplesInternal does not need to pass its sampleCo...
youenn fablet
Reported
2020-11-13 06:04:32 PST
AudioSampleDataSource::pullSamplesInternal does not need to pass its sampleCount parameter as in/out
Attachments
Patch
(3.69 KB, patch)
2020-11-13 06:06 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-11-13 06:06:46 PST
Created
attachment 414036
[details]
Patch
EWS
Comment 2
2020-11-15 09:47:39 PST
Committed
r269829
: <
https://trac.webkit.org/changeset/269829
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414036
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-11-15 09:48:19 PST
<
rdar://problem/71415851
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug