AudioSampleDataSource::pullSamplesInternal does not need to pass its sampleCount parameter as in/out https://bugs.webkit.org/show_bug.cgi?id=218899

Reviewed by Eric Carlson.

pullSamplesInternal sets sampleCount to zero in some cases where pullSamplesInternal returns false.
pullSamplesInternal callers do not use the sampleCount parameter if pullSamplesInternal returns false.
Pass sampleCount by value to clarify the behavior and remove setting sampleCount to zero in pullSamplesInternal return false case.

No change of behavior.

* platform/audio/cocoa/AudioSampleDataSource.h:
* platform/audio/cocoa/AudioSampleDataSource.mm:
(WebCore::AudioSampleDataSource::pullSamplesInternal):


Canonical link: https://commits.webkit.org/231594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269829 268f45cc-cd09-0410-ab3c-d52691b4dbfc